# paradias

./: Makefile.am  README.md  configure.ac  style.css
figures/: flow.eps
src/: Makefile.SR16000-xlf90_r-fftw_xlc  Makefile.am.OpenMP  ToDo  atom_module.F  average_module.F  bct  coordinates_check.F  coordinates_check.csh  coordinates_module.F  cross-section-q.sh  d_V.F  d_V_d_displacements.F  define.h  dipole_dipole_3d_Ewald.F  dipole_dipole_functions_module.F  dispersion.F  dispersion_gnuplot.F  dynamical_matrix.F  energy_module.F  fcc  fft_3d_r2c_NxN_lower_then_copy.F  ifc_matrix.F  k2eigenvalues.F  kinetic_energy.F  leapfrog.F  paradias.F  quadratic_module.F  rotate_spin.F  sc  scnn  scnn.gp  scnnlf  sort_eigen.F  system_size.gp  update_torque.F  velocity_scaling.F  xtal_calc_other_parameters.F  xtal_module.F
